[package]
name = "OpenIU"
version = "0.1.0"
edition = "2021"

[source.crates-io]
replace-with = 'ustc'

[source.ustc]
registry = "git://mirrors.ustc.edu.cn/crates.io-index"


[dependencies]
axum = "0.4.3"
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
serde_json = "1"
http = "0.2.1"
rand="0.7.3"
tower-http = { version = "0.2.0", features = ["fs", "trace"] }